# usingCmake

./: CMakeLists.txt  install.sh  main.cpp
inc/: MathOperations.hpp
inc/helpers/: Print.hpp
src/: MathOperations.cpp  main.cpp
src/helpers/: Print.cpp
src/libraries/MyMath/: CMakeLists.txt
src/libraries/MyMath/inc/: MyMath.hpp
src/libraries/MyMath/src/: MyMath.cpp
